# indeed_scrapy

./: .gitignore  .pre-commit-config.yaml  default.cfg  default.env  main.py  main_api.py  pyproject.toml
src/: scraper.py
src/utility/: config.py  options.py
test/: test_config.py
tests/: test_config.py
