[tool.poetry]
name = "indeedscrapy"
version = "0.1.0"
description = ""
authors = ["Cristiano Salerno <cristianosalerno1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.3.0"
attrs = "^21.4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
