[tool.poetry]
name = "indeedscrapy"
version = "0.1.0"
description = ""
authors = ["Cristiano Salerno <cristianosalerno1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.3.0"
attrs = "^22.1.0"
requests = "^2.28.1"
pydantic = "^1.9.1"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
test = "pytest"
tests = "pytest"
linters = "pre-commit run --all-files"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
src_paths = ["src", "test"]
